kubernetes/weather-bg/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: weather-bg

spec:
  selector:
    app.kubernetes.io/name: weather-bg
    app.kubernetes.io/instance: weather-bg
  ports:
  - port: 8080
    targetPort: http
    name: http
